--- a/src/_App.scss
+++ b/src/_App.scss
@@ -13,6 +13,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgba($accent2, 0.2);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .catalogue {
