add useState on tariff

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,10 +20,10 @@
     width: 80%;
     height: 40%;
     display: flex;
+    margin: 2% auto;
 }
 
 .title {
     color: $accent1;
     text-transform: uppercase;
-    margin-bottom: 2%;
 }
