--- a/src/components/tariff/Tariff.module.scss
+++ b/src/components/tariff/Tariff.module.scss
@@ -7,7 +7,7 @@
     text-align: center;
     justify-content: space-around;
     padding: 1%;
-    margin: 0 0.1%;
+    margin: 0 2%;
     border: 2px solid $accent1;
     background-color: rgba($bg, 0.2);
     border-radius: 1em;
@@ -16,22 +16,24 @@
     &:focus,
     &:active {
         background-color: rgba($bg, 0.7);
-        transform: translateY(-3px);
         box-shadow: 0 10px 20px $accent1;
-        transition: 0.5s;
     }
 }
 
 .extra {
     border: 2px solid $accent2;
     background-color: $accent2;
-    width: 50%;
     &:hover,
     &:focus,
     &:active {
         background-color: rgba($accent2, 0.7);
         box-shadow: 0 10px 20px $accent2;
     }
+}
+
+.selected {
+    transform: scale(1.1);
+    transition: 0.3s;
 }
 
 .card__title,
